fix link to tool

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       This is a tool that cuts up an image into segments, and uses those segments to replicate another image.
     </p>
     <center>
-      <a href="/morph.html"><button type="button" name="button">Go to tool</button></a>
+      <a href="/mosaic-morph/morph.html"><button type="button" name="button">Go to tool</button></a>
     </center>
     <br>
     <h3>Example</h3>
@@ -32,7 +32,7 @@
     <br>
     <br>
     <center>
-      <a href="/morph.html"><button type="button" name="button">Make your own</button></a>
+      <a href="/mosaic-morph//morph.html"><button type="button" name="button">Make your own</button></a>
     </center>
     <br>
     <br>
