--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <br>
     <br>
     <center>
-      <a href="/mosaic-morph//morph.html"><button type="button" name="button">Make your own</button></a>
+      <a href="/mosaic-morph/morph.html"><button type="button" name="button">Make your own</button></a>
     </center>
     <br>
     <br>
